🔧 添加洗球動畫強制停止修復腳本
問題：洗球動畫開始後不會停止，需要刷新頁面才能恢復
原因：狀態切換邏輯中stopDrawEffect可能沒有被正確調用

修復方案：
- 創建獨立的修復腳本fix-washing-animation.js
- 每3秒自動檢查是否有異常的洗球動畫
- 如果在betting狀態下發現洗球動畫，自動強制停止
- 提供全局函數window.forceStopWashing供手動調用

臨時解決方案：
1. 打開開發者控制台
2. 輸入：window.forceStopWashing()
3. 立即停止洗球動畫

長期解決：修復腳本會自動監控並修復此問題

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4740,8 +4740,16 @@
                                     }
                                 } else if (serverStatus === 'betting' && previousStatus === 'drawing') {
                                     console.log('✅ 開獎完成，停止洗球動畫並更新結果');
-                                    // 停止洗球動畫並顯示新結果
-                                    this.stopDrawEffect();
+                                    console.log(`🔧 調試信息 - previousStatus: ${previousStatus}, serverStatus: ${serverStatus}`);
+                                    // 強制停止洗球動畫並顯示新結果
+                                    try {
+                                        this.stopDrawEffect();
+                                        console.log('✅ stopDrawEffect 執行完成');
+                                    } catch (error) {
+                                        console.error('❌ stopDrawEffect 執行錯誤:', error);
+                                        // 如果async函數失敗，使用同步方式強制停止
+                                        this.forceStopDrawEffect();
+                                    }
                                     this.updateBalance();
                                     this.updateBetHistory();
                                     this.updateHistoryRecords();
