--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1864,7 +1864,7 @@
         
         /* 現代化開獎結果區域樣式 */
         .modern-result-section {
-            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
             color: white;
             margin-block: 15px;  /* 🎯 只保留上下margin */
             margin-inline: 0;    /* 清除左右margin，讓賽果區寬度最大化 */
@@ -3366,7 +3366,7 @@
             justify-content: space-between;
             padding: 20px 24px;
             border-bottom: 2px solid #f0f2f5;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
             color: white;
             border-radius: 12px 12px 0 0;
         }
@@ -5207,10 +5207,6 @@
                         暫無開獎記錄
                     </div>
                     <div v-for="(record, index) in recentResults" :key="`history-${record.period}-${index}`" class="history-item">
-                        <div class="period-info">
-                            <div class="period">{{ record.period }}期</div>
-                            <div class="time">{{ formatDateTime(record.time) }}</div>
-                        </div>
                         <div class="result-balls">
                             <div v-for="(number, ballIndex) in record.result" :key="ballIndex" 
                                  :class="['number-ball', 'color-' + number]">
