--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -6493,7 +6493,7 @@
                         'tenth': '第十名',
                         'dragonTiger': '龍虎',
                         'number': '單號',
-                        'position': '快速'
+                        'position': '快速大小單雙'
                     };
                     
                     // 如果是位置投注，顯示具體位置
@@ -6519,12 +6519,14 @@
                     
                     if (bet.type === 'dragonTiger') {
                         // 龍虎投注值格式處理：dragon_1_10 -> 龍(冠軍vs第10名)
-                        const parts = bet.value.split('_');
-                        if (parts.length === 3) {
-                            const dragonTiger = parts[0] === 'dragon' ? '龍' : '虎';
-                            const pos1 = parts[1] === '1' ? '冠軍' : parts[1] === '2' ? '亞軍' : `第${parts[1]}名`;
-                            const pos2 = `第${parts[2]}名`;
-                            return `${dragonTiger}(${pos1}vs${pos2})`;
+                        if (bet.value && bet.value.includes('_')) {
+                            const parts = bet.value.split('_');
+                            if (parts.length === 3) {
+                                const dragonTiger = parts[0] === 'dragon' ? '龍' : '虎';
+                                const pos1 = parts[1] === '1' ? '冠軍' : parts[1] === '2' ? '亞軍' : `第${parts[1]}名`;
+                                const pos2 = parts[2] === '10' ? '第十名' : `第${parts[2]}名`;
+                                return `${dragonTiger}(${pos1}vs${pos2})`;
+                            }
                         }
                         return bet.value.startsWith('dragon') ? '龍' : '虎';
                     }
@@ -6553,8 +6555,12 @@
                         const dragonTigerType = bet.value.startsWith('dragon') ? 'dragon' : 'tiger';
                         return this.odds.dragonTiger[dragonTigerType] || parseFloat((1.96 * (1 - rebatePercentage)).toFixed(3));
                     } else if (bet.type === 'position') {
-                        // 位置投注使用固定賠率
-                        return bet.odds || this.getPropertyOdds(bet.property) || parseFloat((1.96 * (1 - rebatePercentage)).toFixed(3));
+                        // 位置投注使用正確的賠率計算
+                        if (['big', 'small', 'odd', 'even'].includes(bet.value) || ['big', 'small', 'odd', 'even'].includes(bet.property)) {
+                            return parseFloat((1.96 * (1 - rebatePercentage)).toFixed(3));  // 1.96 × (1-4.1%) = 1.88
+                        } else {
+                            return bet.odds || 1.0;
+                        }
                     } else if (bet.type === 'sumValue') {
                         // 冠亞和值投注
                         if (['big', 'small', 'odd', 'even'].includes(bet.value)) {
