--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -5965,12 +5965,12 @@
                     const secs = seconds % 60;
                     return `${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
                 },
-                // 格式化歷史開獎時間為 HH:MM 格式
+                // 格式化歷史開獎時間為 HH:MM:SS 格式
                 formatHistoryTime(dateStr) {
-                    if (!dateStr) return 'NaN:NaN';
+                    if (!dateStr) return 'NaN:NaN:NaN';
                     const date = new Date(dateStr);
-                    if (isNaN(date.getTime())) return 'NaN:NaN';
-                    return `${date.getHours().toString().padStart(2, '0')}:${date.getMinutes().toString().padStart(2, '0')}`;
+                    if (isNaN(date.getTime())) return 'NaN:NaN:NaN';
+                    return `${date.getHours().toString().padStart(2, '0')}:${date.getMinutes().toString().padStart(2, '0')}:${date.getSeconds().toString().padStart(2, '0')}`;
                 },
                 formatOdds(odds) {
                     if (odds === undefined || odds === null) {
