🚫 全面禁用低於1元投注功能
✨ 新增功能：
- 確認下注按鍵增加金額檢查：disabled when betAmount < 1
- 統一所有投注金額驗證：自定義金額函數從> 0改為>= 1
- 錯誤提示標準化：統一顯示「投注金額不能少於1元」

🛡️ 多重防護機制：
1. HTML輸入框限制：min=1 step=1
2. 主要下注按鍵禁用：betAmount < 1時按鍵不可點擊
3. 確認下注按鍵禁用：雙重保險防止無效投注
4. 自定義金額驗證：後台函數級別檢查
5. 前端JavaScript驗證：所有相關函數統一標準

💡 用戶體驗改善：
- 用戶無法輸入小於1元的金額
- 即使嘗試修改也無法下注
- 提供清晰一致的錯誤提示
- 避免用戶點擊後才發現錯誤的困惑

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -5175,7 +5175,7 @@
                 
                 <div class="bet-confirm-actions">
                     <button class="cancel-bet-btn" @click="showBetModal = false">取消</button>
-                    <button class="confirm-bet-btn" @click="confirmBets" :disabled="gameStatus !== 'betting'">
+                    <button class="confirm-bet-btn" @click="confirmBets" :disabled="gameStatus !== 'betting' || !betAmount || betAmount < 1">
                         {{ gameStatus === 'betting' ? '確認' : '已封盤' }}
                     </button>
                 </div>
@@ -7115,12 +7115,12 @@
                     }
                 },
                 setAllCustomAmount() {
-                    if (this.customAmount && !isNaN(this.customAmount) && this.customAmount > 0) {
+                    if (this.customAmount && !isNaN(this.customAmount) && this.customAmount >= 1) {
                         const amount = parseFloat(this.customAmount);
                         this.setAllBetAmount(amount);
                         this.customAmount = ''; // 清空輸入框
                     } else {
-                        alert('請輸入有效的下注金額');
+                        alert('投注金額不能少於1元');
                     }
                 },
                 positionToKey(position) {
