實現同一帳號不能同時在不同裝置登入功能
🔒 新增功能：
- 創建會話管理系統(SessionManager)，支持設備間登入互斥
- 實現會員和代理登入時強制登出其他裝置的會話
- 新增會話檢查和登出API端點，支持伺服器端會話管理
- 添加前端會話監控腳本，每5分鐘檢查會話狀態
- 實現會話失效時的用戶提示和自動跳轉機制

💻 後端修改：
- backend.js: 整合SessionManager到會員登入和會話檢查API
- agentBackend.js: 整合SessionManager到代理登入和會話檢查API
- security/session-manager.js: 全新的會話管理系統

🖥️ 前端修改：
- 登入頁面保存會話token到sessionStorage
- 主頁面增強會話檢查邏輯，檢測多裝置登入
- 代理系統更新登入和登出邏輯支持會話管理
- 新增會話監控腳本自動檢測會話狀態

🛡️ 安全特性：
- 資料庫表user_sessions管理所有會話狀態
- 會話token使用crypto.randomBytes()生成，確保安全性
- 支援IP異常檢測，防止暴力登入攻擊
- 定時清理過期會話，維持系統性能
- 向後兼容舊版token系統

✨ 用戶體驗：
- 登入時自動登出其他裝置，無縫切換
- 會話失效時友好提示，可選擇立即重新登入
- 支援頁面可見性檢測，離開後回來時即時檢查
- 估算剩餘會話時間，8小時會話有效期

同時更新frontend和deploy版本確保功能一致性

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,17 +44,36 @@
 
             // 會話驗證改為非阻塞式，避免網路問題造成無限重定向
             try {
+                const sessionToken = sessionStorage.getItem('sessionToken');
+                const headers = {
+                    'Authorization': `Bearer ${sessionStorage.getItem('token') || ''}`
+                };
+                
+                // 如果有新的會話token，使用它
+                if (sessionToken) {
+                    headers['X-Session-Token'] = sessionToken;
+                }
+                
                 const response = await fetch('/api/member/check-session', {
                     method: 'GET',
                     credentials: 'include',
-                    headers: {
-                        'Authorization': `Bearer ${sessionStorage.getItem('token') || ''}`
-                    }
+                    headers: headers
                 });
 
                 if (!response.ok) {
                     console.warn('Session validation failed, but continuing...');
                     // 不立即清除登入狀態，讓用戶繼續使用
+                } else {
+                    const result = await response.json();
+                    if (!result.isAuthenticated && result.reason === 'session_invalid') {
+                        console.warn('⚠️ 檢測到會話已失效，可能在其他裝置登入');
+                        // 可以選擇立即跳轉到登入頁面或顯示警告
+                        if (confirm('您的帳號已在其他裝置登入，請重新登入。')) {
+                            sessionStorage.clear();
+                            window.location.href = 'login.html';
+                            return;
+                        }
+                    }
                 }
             } catch (error) {
                 console.warn('Session validation error:', error);
