修復登入前意外彈出新增會員模態框問題
- 在HTML中添加用戶登入狀態檢查條件（isLoggedIn && user && user.id）
- 在quickCreateMember方法中添加安全檢查，防止未登入狀態下執行
- 在mounted生命週期強制重置模態框狀態為關閉
- 同步更新frontend和deploy版本確保一致性
- 徹底解決登入前模態框意外顯示和自動關閉的問題

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -147,8 +147,8 @@
                 </div>
             </nav>
 
-            <!-- 全域新增會員模態框 - 不受頁籤限制，任何頁面都可以使用 -->
-            <div id="createMemberModal" v-if="showCreateMemberModal" 
+            <!-- 全域新增會員模態框 - 不受頁籤限制，任何頁面都可以使用，只在登入後顯示 -->
+            <div id="createMemberModal" v-if="showCreateMemberModal && isLoggedIn && user && user.id" 
                  style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.85); z-index: 99999; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(3px);">
                 
                 <!-- 模態框主體 -->
