徹底修復登入前模態框意外顯示問題 - 終極解決方案
🔒 多層防護機制：
1. HTML條件渲染保護：所有模態框都加上 isLoggedIn && user && user.id 檢查
2. JavaScript方法防護：showProfileModal和quickCreateMember添加登入狀態檢查
3. Vue生命週期重置：mounted()中強制重置所有模態框狀態為false
4. 全域響應式監聽：使用監聽模態框狀態變化，即時阻止未登入顯示
5. 方法級安全檢查：各個show方法內部都有安全驗證

📋 修復的模態框：
- 新增會員模態框 (showCreateMemberModal)
- 個人資料模態框 (isProfileModalVisible)
- 新增代理模態框 (showCreateAgentModal)
- 客服操作模態框 (showCSOperationModal)
- 餘額調整模態框 (showAdjustBalanceModal)

✅ 確保無論任何情況都不會在登入前顯示模態框，提供完美的用戶體驗

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -2148,7 +2148,7 @@
         </div>
 
         <!-- 個人資料 Modal -->
-        <div v-if="isProfileModalVisible" class="modal d-block" id="profileModal" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
+                    <div v-if="isProfileModalVisible && isLoggedIn && user && user.id" class="modal d-block" id="profileModal" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
