激進修復：徹底清除登入前模態框閃現問題
🔧 根本性解決方案：
1. 移除複雜的DOM操作邏輯：刪除setTimeout、、等複雜操作
2. 簡化模態框顯示：只使用Vue響應式狀態，移除手動DOM樣式設定
3. 新增modalSystemReady標誌：延遲1秒啟用模態框系統，確保完全載入
4. 強化HTML條件檢查：所有模態框都需要modalSystemReady=true才能顯示
5. 清理hideCreateMemberModal：移除不必要的DOM操作，只保留狀態重置

🎯 修復目標：
- 徹底阻止登入前任何模態框閃現
- 簡化代碼邏輯，減少異步操作導致的時序問題
- 確保模態框只在系統完全準備就緒後才能顯示

✅ 現在模態框系統更加穩定，無閃現風險

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -148,7 +148,7 @@
             </nav>
 
             <!-- 全域新增會員模態框 - 不受頁籤限制，任何頁面都可以使用，只在登入後顯示 -->
-            <div id="createMemberModal" v-if="showCreateMemberModal && isLoggedIn && user && user.id" 
+            <div id="createMemberModal" v-if="showCreateMemberModal && isLoggedIn && user && user.id && modalSystemReady" 
                  style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.85); z-index: 99999; display: flex; align-items: center; justify-content: center; backdrop-filter: blur(3px);">
                 
                 <!-- 模態框主體 -->
@@ -2148,7 +2148,7 @@
         </div>
 
         <!-- 個人資料 Modal -->
-                    <div v-if="isProfileModalVisible && isLoggedIn && user && user.id" class="modal d-block" id="profileModal" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
+                    <div v-if="isProfileModalVisible && isLoggedIn && user && user.id && modalSystemReady" class="modal d-block" id="profileModal" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
