--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -600,11 +600,33 @@
                                                     <button class="btn btn-outline-warning" @click="resetAgentPassword(agent)">
                                                         <i class="fas fa-key me-1"></i>重设密碼
                                                     </button>
-                                                    <button class="btn" :class="getStatusBadgeClass(agent.status)" 
-                                                            @click="toggleAgentStatus(agent)">
-                                                        <i class="fas" :class="getStatusIconClass(agent.status)"></i>
-                                                        {{ getStatusText(agent.status) }}
-                                                    </button>
+                                                    <div class="btn-group">
+                                                        <button type="button" class="btn btn-sm" :class="getStatusBadgeClass(agent.status)" disabled>
+                                                            <i class="fas" :class="getStatusIconClass(agent.status)"></i>
+                                                            {{ getStatusText(agent.status) }}
+                                                        </button>
+                                                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle dropdown-toggle-split" 
+                                                                data-bs-toggle="dropdown" aria-expanded="false">
+                                                            <span class="visually-hidden">切換狀態</span>
+                                                        </button>
+                                                        <ul class="dropdown-menu">
+                                                            <li v-if="agent.status !== 1">
+                                                                <a class="dropdown-item" href="#" @click.prevent="changeAgentStatus(agent, 1)">
+                                                                    <i class="fas fa-check text-success me-2"></i>设为启用
+                                                                </a>
+                                                            </li>
+                                                            <li v-if="agent.status !== 0">
+                                                                <a class="dropdown-item" href="#" @click.prevent="changeAgentStatus(agent, 0)">
+                                                                    <i class="fas fa-ban text-secondary me-2"></i>设为停用
+                                                                </a>
+                                                            </li>
+                                                            <li v-if="agent.status !== 2">
+                                                                <a class="dropdown-item" href="#" @click.prevent="changeAgentStatus(agent, 2)">
+                                                                    <i class="fas fa-snowflake text-warning me-2"></i>设为凍結
+                                                                </a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
                                                     <button class="btn btn-outline-danger" @click="deleteAgent(agent.id, agent.username)">
                                                         <i class="fas fa-trash-alt me-1"></i>删除
                                                     </button>
@@ -896,11 +918,33 @@
                                                     <button class="btn btn-sm btn-outline-warning" @click="resetMemberPassword(member)">
                                                         <i class="fas fa-key me-1"></i>重设密碼
                                                     </button>
-                                                    <button class="btn btn-sm" :class="getStatusBadgeClass(member.status)" 
-                                                            @click="toggleMemberStatus(member.id, member.status)">
-                                                        <i class="fas" :class="getStatusIconClass(member.status)"></i>
-                                                        {{ getStatusText(member.status) }}
-                                                    </button>
+                                                    <div class="btn-group">
+                                                        <button type="button" class="btn btn-sm" :class="getStatusBadgeClass(member.status)" disabled>
+                                                            <i class="fas" :class="getStatusIconClass(member.status)"></i>
+                                                            {{ getStatusText(member.status) }}
+                                                        </button>
+                                                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle dropdown-toggle-split" 
+                                                                data-bs-toggle="dropdown" aria-expanded="false">
+                                                            <span class="visually-hidden">切換狀態</span>
+                                                        </button>
+                                                        <ul class="dropdown-menu">
+                                                            <li v-if="member.status !== 1">
+                                                                <a class="dropdown-item" href="#" @click.prevent="changeMemberStatus(member, 1)">
+                                                                    <i class="fas fa-check text-success me-2"></i>设为启用
+                                                                </a>
+                                                            </li>
+                                                            <li v-if="member.status !== 0">
+                                                                <a class="dropdown-item" href="#" @click.prevent="changeMemberStatus(member, 0)">
+                                                                    <i class="fas fa-ban text-secondary me-2"></i>设为停用
+                                                                </a>
+                                                            </li>
+                                                            <li v-if="member.status !== 2">
+                                                                <a class="dropdown-item" href="#" @click.prevent="changeMemberStatus(member, 2)">
+                                                                    <i class="fas fa-snowflake text-warning me-2"></i>设为凍結
+                                                                </a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
                                                     <button class="btn btn-sm btn-outline-danger" @click="deleteMember(member.id, member.username)">
                                                         <i class="fas fa-trash-alt me-1"></i>删除
                                                     </button>
