修復登錄日誌UI樣式和IP地址顯示問題
1. 表頭樣式增強: 添加白色字體和粗體顯示，確保NO./用戶名/登錄時間/IP/IP歸屬地標籤清晰可見
2. IP地址格式化: 新增formatIPAddress()函數移除IPv6映射前綴::ffff:，顯示乾淨的IP地址
3. 修復範圍: agent和deploy兩個前端版本同步更新
4. 測試驗證: 確保::ffff:192.168.1.100正確顯示為192.168.1.100

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -555,11 +555,11 @@
                                 <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr>
-                                            <th style="width: 80px;">NO.</th>
-                                            <th style="width: 150px;">用戶名</th>
-                                            <th style="width: 180px;">登錄時間</th>
-                                            <th style="width: 150px;">IP</th>
-                                            <th>IP歸屬地</th>
+                                            <th style="width: 80px; color: white; font-weight: bold;">NO.</th>
+                                            <th style="width: 150px; color: white; font-weight: bold;">用戶名</th>
+                                            <th style="width: 180px; color: white; font-weight: bold;">登錄時間</th>
+                                            <th style="width: 150px; color: white; font-weight: bold;">IP</th>
+                                            <th style="color: white; font-weight: bold;">IP歸屬地</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -567,7 +567,7 @@
                                             <td>{{ (loginLogPagination.currentPage - 1) * loginLogPagination.limit + index + 1 }}</td>
                                             <td><strong>{{ log.username || currentUsername }}</strong></td>
                                             <td>{{ formatLoginDateTime(log.login_time) }}</td>
-                                            <td><span class="font-monospace">{{ log.ip_address }}</span></td>
+                                            <td><span class="font-monospace">{{ formatIPAddress(log.ip_address) }}</span></td>
                                             <td>{{ log.ip_location || '未知位置' }}</td>
                                         </tr>
                                         <tr v-if="loginLogs.length === 0">
